--- a/ödev1/index.htm
+++ b/ödev1/index.htm
@@ -17,5 +17,34 @@
         Şimdi ise javaScript öğreniyorum.
  </p>
 <!--<h3>hobilerim</h3>-->
+<h3>İlgi Alanlarım</h3>
+<ol>
+    <li>Film</li>
+    <ul>
+        <li>The Shawshank Redemption</li>
+        <li>The Dark Knight (2008)</li>
+        <li><a href="https://www.imdb.com/title/tt0167260/">The Lord of the Rings: The Return of the King (2003)</a>
+             </li>
+    </ul>
+    <li>Dizi</li>
+    <ul>
+    <li>How I met Your mother</li>
+    <li>The Boys</li>
+    <li>Prison Break</li>
+</ul>
+    <li>Kitap</li>
+    <ul>
+        <li>Körlük</li>
+        <li> <a href="https://www.goodreads.com/book/show/6795650-simyac?from_search=true&from_srp=true&qid=OfH9G8YzLn&rank=1">
+            Simyacı</a></li>
+        <li>Suç ve ceza</li>
+    </ul>
+</ol>
+<h2>Sevdiğim Diziler</h2>
+<p>How I met Your mother</p>
+<img src="images/hımym.jpg" alt="How I met Your mother">
+<p>Bir baba, çocuklarına -bir dizi geri dönüşle- kendisinin
+     ve en iyi dört arkadaşının anneleriyle tanışmasına kadar çıktığı yolculuğu anlatır.</p>
+
 </body>
 </html>
